# embedded_rust

./: Cargo.toml
blinky/: Cargo.toml
blinky/.cargo/: config.toml
src/: main.rs
uart/: Cargo.toml
